--- a/cm/inventory.ini
+++ b/cm/inventory.ini
@@ -1,2 +1,2 @@
-[webserver]
-192.168.44.77   ansible_ssh_private_key_file=~/.bakerx/insecure_private_key    ansible_user=vagrant
+[mattermost]
+192.168.33.90   ansible_ssh_private_key_file=~/.ssh/id_rsa    ansible_user=vagrant
