--- a/cm/playbook.yml
+++ b/cm/playbook.yml
@@ -2,6 +2,6 @@
 # see the best practices in ansible docs for how to get started with creating roles etc.: 
 # https://docs.ansible.com/ansible/latest/user_guide/playbooks_best_practices.html
 
-- hosts: webserver
+- hosts: mattermost
   roles:
     - ping
