adding mysql service to opunit.yml

--- a/test/opunit.yml
+++ b/test/opunit.yml
@@ -14,6 +14,9 @@
       - service:
          name: mattermost
          status: active
+      - service:
+         name: mysql
+         status: active
       - contains:
          file: /opt/mattermost/config/config.json
          string: '"DriverName": "mysql"'
