--- a/test/inventory.yml
+++ b/test/inventory.yml
@@ -1,4 +1,8 @@
 ---
 - ssh:
+  - target: vagrant@192.168.33.10
+    private_key: ~/.bakerx/insecure_private_key
+    criteria_path: test/ansible.yml
   - target: vagrant@192.168.33.80
     private_key: ~/.bakerx/insecure_private_key
+    criteria_path: test/mattermost.yml
