--- a/cm/inventory.ini
+++ b/cm/inventory.ini
@@ -1,4 +1,4 @@
 [mattermost]
-192.168.33.80   ansible_ssh_private_key_file=~/.ssh/mm_rsa    ansible_user=vagrant
+192.168.33.80   ansible_ssh_private_key_file=~/.ssh/mm_rsa    ansible_user=vagrant ansible_python_interpreter=/usr/bin/python3 
 [mattermost:vars]
 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
